src/test/ui/traits/suggest-deferences/issue-62530.stderr
error[E0277]: the trait bound `&String: SomeTrait` is not satisfied
  --> $DIR/issue-62530.rs:13:26
   |
LL | fn takes_type_parameter<T>(_x: T) where T: SomeTrait {}
   |                                            --------- required by this bound in `takes_type_parameter`
...
LL |     takes_type_parameter(&string);  // Error
   |                          ^^^^^^^
   |                          |
   |                          the trait `SomeTrait` is not implemented for `&String`
   |                          help: consider adding dereference here: `&*string`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
